@@ -19,6 +19,7 @@ VERSION 2.3.2-Beta 1
       browser, e.g. "played:<3d".
 
   CHANGES:
+    * Don't allow the last visible playlist source in User Playlists to be hidden.
     * "Play Media" dialog now remembers the last used directory. (BR 231092)
     * Organize Dialog: tweaked the layout to fit better on smaller resolutions (BR 238000)
     * Filtering: added year suffix for date filters in the collection browser.
